# ProjectRAG

./: .gitignore  BUG_FIXES.md  MIGRATION_SUMMARY.md  README.md  SIMPLE_WORKFLOW.md  config.py  pyproject.toml  quickstart.py  requirements.txt  streamlit_app.py  test_retrieval.py  url_collections.json  url_mapper.py  utils.py
agent/: __init__.py  document.py  index_docs.py  main.py
documents/: sample.txt
lang_comps/: __init__.py  components.py
qdrant/: __init__.py  client.py
tools/: retrival.py
