[project]
name = "rag-project"
version = "0.1.0"
description = "RAG-based document Q&A system with LangChain, Google Gemini, and Qdrant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "pypdf>=5.1.0",
]
